@@ -2,6 +2,9 @@ $Id$
 
 2016-03-26  Christian Franke  <franke@computer.org>
 
+	smartctl.cpp, smartd.cpp, utility.cpp, utility.h:
+	Remove split_report_arg(), use sscanf() instead.
+
 	Add basic NVMe support for smartd (-H -l error -W):
 	Makefile.am, os_win32/vc10/smartd.vcxproj: Add nvmecmds.cpp to smartd.
 	smartd.cpp: Add NVMeDeviceScan() and NVMeCheckDevice().
